<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/false_button" />
    </LinearLayout>

    <Button
        android:id="@+id/CustomReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Custom Report"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textAllCaps="false"
        android:layout_marginTop="64dp"/>
    <Button
        android:id="@+id/btn_crash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Make Crash"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="true"
        android:orientation="horizontal"
        android:weightSum="0.45">

        <Button
            android:id="@+id/setting_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="4dp"
            android:layout_weight="0.15"
            android:text="@string/setting_button" />

        <Button
            android:id="@+id/post_score_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="4dp"
            android:layout_weight="0.20"
            android:text="@string/post_score_button" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="4dp"
            android:layout_weight="0.10"
            android:text="@string/next_button" />
    </LinearLayout>

</LinearLayout>


